--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-div">
             <div class="left-div">
                 <h1>Faça login<br>E entre para o nosso time</h1>
-                <img src="./astronaut-suit-animate.svg" class="image">
+                <img src="/assets/astronaut-suit-animate.svg" class="image">
             </div>
             <div class="right-div">
                 <div class="login-field">
